fix: fixes horizontal scrollbar

--- a/mock-1/public/common.css
+++ b/mock-1/public/common.css
@@ -13,7 +13,7 @@ p {
 
 /* main-view */
 .main-view {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url(assets/main-view__background.png);
   background-repeat: no-repeat;
